more stylesheet changes

--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ body {
 	padding-top: 200px;
 }
 
-/* mailchimp subscribe button */ 
+/* mailchimp subscribe */ 
 #mc-embedded {
     width: auto;
     display: block;
