--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@ body {
 }
 
 .btn:focus, .btn:active:focus, .btn.active:focus {
+	background-color: #fff;
+	color: #2A8C93;
     outline: 0 none;
 }
 
@@ -95,5 +97,10 @@ body {
 
 .dropdown-menu>li>a {
     font-family: 'Work Sans', sans-serif;
+    color: #676767;
+}
+
+button, input, select, textarea {
+	font-family: 'Work Sans', sans-serif;
     color: #676767;
 }
