--- a/style.css
+++ b/style.css
@@ -97,3 +97,25 @@ body {
     font-family: 'Work Sans', sans-serif;
     color: #676767;
 }
+
+/*lesson styles*/
+.lesson {
+	width: 60%;
+	margin: 40px auto 0 auto;
+	text-align: center;
+}
+
+.lesson-copy {
+	font-size: 20px;
+}
+
+p {
+	font-family: 'Work Sans', sans-serif;
+}
+
+
+
+
+
+
+
