--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ h2 {
 /*audio player styles*/
 
 audio {
-	min-width: 600px;
+	/*min-width: 600px;*/
 	margin: 0 auto;
 }
 
@@ -164,8 +164,6 @@ audio {
 	box-shadow: none;
 	margin: 0 auto;
 	border-radius: 5px;
-	background: #929292;
-	background-image: none;
 }
 
 .audiojs .play-pause {
