--- a/style.css
+++ b/style.css
@@ -183,3 +183,13 @@ audio {
 ul {
 	list-style-type: none;
 }
+
+.li1 {
+   background:url('img/ashleywu.jpg') no-repeat no-repeat;
+   padding-left: 5px;
+}
+
+.li2 {
+   background:url('img/cassidyclawson.jpg') 50% 50% no-repeat no-repeat;
+   padding-left: 5px;
+}
