--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ h2 {
 .subhead {
 	font-weight: bold;
 	color: #f16364;
+	font-size: 23px;
 }
 
 /*audio player styles*/
@@ -194,4 +195,9 @@ h2 {
 
 ul {
 	list-style-type: none;
+}
+
+.lesson-copy a {
+	text-decoration: none;
+	color: #f16364;
 }
