--- a/style.css
+++ b/style.css
@@ -132,6 +132,8 @@ input:focus {
 #intro {
 	font-size: 16px;
 	margin-bottom: 30px;
+	line-height: 1.5;
+
 }
 
 #signup {
@@ -213,8 +215,38 @@ ul {
 	margin-top: 200px;
 }
 
-#socialbuttons {
-    float: right;
+#socialbuttons {  
+    float: right;     
     margin-top: -25px;
+}
+
+/* about page styles */
+#abouttitle {
+	font-size: 40px;
+	margin-bottom: 20px;
+	padding-top: 20px;
+}
+
+#aboutsubtitle {
+	font-size: 40px;
+	margin-bottom: 20px;
+	padding-top: 20px;
+}
+
+.col-md-4 {
+	margin-bottom: 30px;
+}
+
+.contributorimg {
+	padding-right: 15px;
+}
+
+#contributors {
+	padding-bottom: 140px;
+}
+
+.contributorlink {
+	font-family: 'Work Sans', sans-serif;
+	color: black;
 }
 
